# src/main/java/com/rfidback/controller/ReaderController.java
@@ -1,5 +1,7 @@
 package com.rfidback.controller;
 
+import java.util.UUID;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -9,6 +11,7 @@ import com.rfidback.generated.api.ReaderApiDelegate;
 import com.rfidback.generated.model.CreateReader;
 import com.rfidback.generated.model.Reader;
 import com.rfidback.generated.model.ReadersList;
+import com.rfidback.generated.model.UpdateReader;
 import com.rfidback.service.ReaderService;
 
 @Service
@@ -26,6 +29,16 @@ public class ReaderController implements ReaderApiDelegate {
     public ResponseEntity<ReadersList> listReaders() throws Exception {
 
         return ResponseEntity.ok(this.readerService.getReaders());
+    }
+
+    @Override
+    public ResponseEntity<Reader> updateReader(UUID readerId, UpdateReader updateReader) throws Exception {
+        return ResponseEntity.ok(readerService.updateReader(readerId, updateReader));
+    }
+
+    @Override
+    public ResponseEntity<Reader> rotateReaderToken(UUID readerId) throws Exception {
+        return ResponseEntity.ok(readerService.rotateToken(readerId));
     }
 
 }
